<resources>

    <!--TODO: CHECK TRANSLATABLE = FALSE, SOME HAVE TO BE DELETED IF NOT USED-->
    <string name="app_name">DreamTrip</string>

    <string name="tab_search">Search</string>
    <string name="tab_flights">Flights</string>
    <string name="tab_destinations">Destinations</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="main_tab1">Search</string>
    <string name="main_tab2">Flights</string>
    <string name="main_tab3">Destinations</string>
    <string name="qr" translatable="false">QR</string>
    <string name="map">Map</string>
    <string name="currency_converter">Currency converter</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="search_hint">Search</string>
    <string name="search_btn_text">Search</string>
    <string name="action_settings">Settings</string>
    <string name="airline_activity_title">Airline Information</string>
    <string name="city_activity_title">City Information</string>
    <string name="airport_activity_title">Airport Information</string>
    <string name="country_activity_title">Country Information</string>
    <string name="deals_from_activity_title">Deals From</string>
    <string name="see_more_opinions">See opinions</string>
    <string name="search_a_flight">Search a flight:</string>
    <string name="hint_flight_number">Flight number (ex: 1234)</string>
    <string name="subscription">Subscribe</string>
    <string name="show_on_map">Show on map</string>
    <string name="opinions_activity_title">Opinions</string>
    <string name="give_us_opinions">Give us \nyour opinion</string>
    <string name="kindness">Kindness</string>
    <string name="comfort">Comfort</string>
    <string name="food">Food</string>
    <string name="miles">Miles</string>
    <string name="punctuality">Punctuality</string>
    <string name="quality_price">Price/Quality</string>
    <string name="general">General</string>
    <string name="dialog_title">Track a flight</string>
    <string name="dialog_add_tracked_flight_title">Add Flight to Follow</string>
    <string name="dialog_add_tracked_destination_title">Add Destination to Follow</string>
    <string name="dialog_add_tracked_flight_button">Add Flight</string>
    <string name="dialog_add_tracked_destination_button">Add Destination</string>
    <string name="add_track_flight_hint">Flight number (ex: AZ 523)</string>
    <string name="follow">Follow</string>
    <string name="map_search">Map</string>
    <string name="qr_search" translatable="false">QR</string>
    <string name="help_search">Search airlines, flights, airports, cities or countries.</string>
    <string name="no_offer_found">No offers found.</string>
    <string name="offer_found">New offer found.</string>
    <string name="no_comment">No comments</string>
    <string name="incorrent_flight_number">Incorrect flight number</string>
    <string name="unfollow">Unfollow</string>
    <string name="origin_to_track">Origin</string>
    <string name="destination_to_track">Destination</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send_opinion">Send</string>
    <string name="write_comment_here">Write comment here...</string>
    <string name="recommend">Recommend:</string>
    <string name="send_opinion_title">Send opinion of</string>
    <string name="incorrect_flight_number">Incorrect flight number</string>
    <string name="error_opinion_send">Error sending opinion</string>
    <string name="error_tracking_flight">Error: Flight not found</string>
    <string name="error_tracking_leg">Error: Not a valid airport or city</string>
    <string name="success_tracking_flight">Successfully tracked flight!</string>
    <string name="success_tracking_leg">Successfully added destination!</string>
    <string name="ok_opinion_send">Opinion successfully registered</string>
    <string name="comment_list_title">Other opinions:</string>
    <string name="from">from</string>
    <string name="origin_not_found">Origin not found</string>
    <string name="destination_not_found">Destination not found</string>
    <string name="flight_info_title">Flight Information</string>
    <string name="send_opinions_title">Send Opinion</string>
    <string name="airports">Airports</string>
    <string name="cities">Cities</string>
    <string name="tracked_flights">Tracked Flights</string>
    <string name="deals">Deals</string>
    <string name="filters">Filters</string>
    <string name="help_add_flights">Click add button and\ntrack a flight</string>
    <string name="help_add_destinations">Click add button and\ntrack a destination</string>
    <string name="opinions_of_title">Opinions of</string>
    <string name="send_opinions_of_title">Send opinion of</string>
    <string name="flight_notification_time">Time between flight status\nupdate</string>
    <string name="deals_notification_time">Time between destinations\noffersupdate</string>
    <string name="language">Language</string>
    <string name="disable_notifications">Enable notifications</string>
    <string name="setting_title">Settings</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_opinions">Opinions</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="status_not_found_flight">Status Error</string>
    <string name="scheduled_flight">Programmed</string>
    <string name="active_flight">Active</string>
    <string name="landed_flight">Landed</string>
    <string name="cancelled_flight">Cancelled</string>
    <string name="delayed_flight">Delayed</string>
    <string name="title_activity_maps">Map</string>
    <string name="flight_status_txt">The flight is</string>
    <string name="estimated_dep_time_txt">Estimated departure time:</string>
    <string name="estimated_arr_time_txt">Estimated arrival time:</string>
    <string name="terminal_txt">Terminal:</string>
    <string name="gate_txt">Gate:</string>
    <string name="luggage_txt">Luggage gate:</string>
    <string name="gps_network_not_enabled">Location services not available</string>
    <string name="open_location_settings">Please turn on location services</string>
    <string name="Cancel">Cancel</string>
    <string name="Map">Map</string>
    <string name="enable">Enable</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_tracked_leg">Sorry, could not track deal.</string>

    <string name="question_whatItDoes">What does this app do?</string>
    <string name="answer_whatItDoes">This app\'s purpose is to help you be up to date
    with the current status of any flight you may be interested in. You can, as well, follow
    many interesting destinations to be notified whenever there is a deal to it.</string>

    <string name="question_howToTrackf">How do I follow a flight?</string>
    <string name="answer_howToTrackf">To follow a flight you may use the add button on the
    main screen and search for it directly, or by pressing follow on its information screen</string>

    <string name="question_howToDeletef">How do I unfollow a flight?</string>
       <string name="answer_howToDeletef">Press and hold a flight and the trash option will appear</string>

    <string name="question_whatDestDoes">How do deals work?</string>
      <string name="answer_whatDestDoes">You may follow any destination available from
      a departure location. The app will notify you whenever it finds a deal.</string>


    <string name="question_howToTrackDest">How do I follow a destination?</string>
    <string name="answer_howToTrackDest">By searching for a departure location, you will be
    presented with all the posible destinations. You may use teh add button on the destination
    screen as well.</string>

    <string name="question_howToDeleteDest">How do I unfollow a destination?</string>
    <string name="answer_howToDeleteDest">Same as a flight, just Press and hold a flight and the trash option will appear</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading_flight">Loading flight, please wait</string>


</resources>
