<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_margin="10dp">

<ScrollView
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_whatItDoes"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_whatItDoes"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_howToTrackf"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_howToTrackf"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_howToDeletef"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_howToDeletef"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_whatDestDoes"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_whatDestDoes"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_howToTrackDest"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_howToTrackDest"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_howToDeleteDest"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_howToDeleteDest"
            android:textAlignment="center"
            android:textSize="15sp"/>



    </LinearLayout>




</ScrollView>
</LinearLayout>