<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="#FFFFFF"
        android:text="@string/dialog_add_tracked_destination_title"
        android:textSize="20dp"
        android:paddingTop="22dp"
        android:paddingLeft="10dp"
        android:background="@color/colorPrimary"/>

    <AutoCompleteTextView
        android:id="@+id/origin_to_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/origin_to_track" />

    <AutoCompleteTextView
        android:id="@+id/destination_to_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/destination_to_track" />


</LinearLayout>