<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ar.edu.itba.dreamtrip.Map.MapsActivity" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/translucid_black"
        android:layout_marginBottom="30dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/filters_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textColor="#FFFFFF"
            android:textSize="26dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"/>

    <LinearLayout
        android:id="@+id/airports_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filters_title"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/airport_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airports"
            android:textSize="18dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cities_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/airports_block"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cities_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cities"
            android:textSize="18dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tracked_flights_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cities_block"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/tracked_flights_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracked_flights"
            android:textSize="18dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/deals_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tracked_flights_block"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/deals_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deals"
            android:textSize="18dp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
