<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">


    <TextView
        android:id="@+id/opinions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/give_opinion_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/opinions_title"
        android:text="@string/give_us_opinions" />

    <RelativeLayout
        android:id="@+id/ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/give_opinion_btn">

        <RelativeLayout
            android:id="@+id/kindness_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kindness"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/kindness_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="2.4"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/comfort_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kindness_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comfort"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/comfort_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="4.1"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/food_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comfort_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/food_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="3.6"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/miles_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/food_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miles"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/miles_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="1.7"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/punctuality_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/miles_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punctuality"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/punctuality_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="2.7"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/quality_price_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/punctuality_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_price"
                android:textSize="18dp" />

            <RatingBar
                android:id="@+id/quality_price_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="3.6"
                android:stepSize="0.1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/general_rating_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quality_price_block"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textSize="26dp" />

            <RatingBar
                android:id="@+id/general_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="100dp"
                android:numStars="5"
                android:rating="2.8"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:stepSize="0.1" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_list_title"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/general_rating_block"
            android:textSize="22dp"/>

    </RelativeLayout>

</RelativeLayout>